# gdmonitorpy

./: .gitignore  Dockerfile  README.md  podman_commands.sh  pyproject.toml
certificates/: magyarkozlony-hu.pem
database/: _gazettes.db  gazettes.db
src/: .env  main.py
src/fetcher/: __init__.py  fetch_gazette.py
src/gdmonitor/: __init__.py  pdf_processor.py  resulation_analyzer.py  resulation_extractor.py
src/repository/: __init__.py  repo_gazette.py
tests/: __init_.py  test_analyze_resolution.py  test_extract_resulations.py  test_pdf_processor.py
